--- a/lab08/prj/TestDriver/TestDriver.cbp
+++ b/lab08/prj/TestDriver/TestDriver.cbp
@@ -16,6 +16,9 @@
 					<Add directory="../../prj" />
 				</Compiler>
 				<Linker>
+					<Add option="-static-libstdc++" />
+					<Add option="-static-libgcc" />
+					<Add option="-static" />
 					<Add directory="../ModulesIvanov/bin/Debug" />
 				</Linker>
 			</Target>
